Implemented sbt build step for DSL.